fix(posts): fix display on small devices

--- a/features/posts/assets/posts.css
+++ b/features/posts/assets/posts.css
@@ -16,6 +16,10 @@
   box-shadow: none !important;
 }
 
+.posts-container .posts-list li .replace-content {
+  max-width: 100%;
+}
+
 .posts-container .posts-list li.loading {
   width: 80%;
 }
